tests/cases/ok/string_methods.p4
def main() -> None:
    value = "compiler"
    print(value.starts_with("com"))
    print(value.ends_with("ler"))
    print(value.find("pil"))
    print(("ab" + "cd").find("bc"))
