tests/cases/fail/string_unknown_method.p4
def main() -> None:
    value = "compiler"
    print(value.nope("com"))
